--- a/Contelizer/zad3/APIhandler/package.json
+++ b/Contelizer/zad3/APIhandler/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^17.2.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-super-responsive-table": "^6.0.2",
     "tailwindcss": "^4.1.16",
     "use-debounce": "^10.0.6"
   },
